explorer and search business in progress

--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
 				<p>Elije un Template para trabajar</p>
 				<ul id="listaDeTrabajos">
 					<li>
+						<a href="templates/menu/menu.html">
+							menu
+						</a>
+					</li>
+					<li>
 						<a href="templates/event/event.html">
 							event
 						</a>
